helm/istio/traffic management/hello-world/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: default-injection
spec:
  selector:
    istio: ingressgateway  # 使用通过istio/gateway安装好的ingress default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP  #  协议为HTTP方式
      hosts:
        - '*'  # 外部访问的host
        - 'baidu.com'
        - 'qq.com'
